--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,9 +1,14 @@
 .header  {
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
+  margin: auto;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -12,14 +17,15 @@
 }
 
 ul {
-  /* this removes the dots on the list items*/
+  display: flex;
+  padding-inline-start: 0;
   list-style-type: none;
 }
 
 a {
   font-size: 22px;
   background: white;
+  margin: 8px;
   padding: 8px;
-  /* this removes the line under the links */
   text-decoration: none;
 }
