--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -1,5 +1,3 @@
-/* this is some magical font-importing.  
-you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
 body {
@@ -9,12 +7,19 @@ body {
 }
 
 .header {
+  display: flex;
+  align-items: center;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
 
+.links-container {
+  display: flex;
+}
+
 .profile-image {
+  margin: 0 8px 0 16px;
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
@@ -23,6 +28,7 @@ body {
 }
 
 .logo {
+  padding: 8px;
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
@@ -30,6 +36,7 @@ body {
 }
 
 button {
+  height: 32px;
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
@@ -38,11 +45,18 @@ button {
 }
 
 a {
-  /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
 }
 
 ul {
   list-style-type: none;
+}
+
+ul.links {
+  padding-inline-start: 8px;
+  align-items: center;
+  display: flex;
+  gap: 16px;
+  margin-right: auto;
 }
