Finish exercise 05-flex-modal
Finished exercise 05-flex-modal and checked with solution

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -16,10 +16,30 @@ body {
 }
 
 .modal {
+  padding: 16px;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+}
+
+.top {
+  display: flex;
+}
+
+.text {
+  margin: 12px 0;
+}
+
+.middle {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  font-size: 20px;
+  margin-right: auto;
 }
 
 .icon {
@@ -33,6 +53,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: 16px;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,6 +70,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  flex-shrink: 0;
 }
 
 button {
