--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,28 +1,71 @@
 body {
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
 .header {
+  align-content: center;
+  box-sizing: border-box;
   height: 72px;
+  font-size: 32px;
+  font-weight: 900;
   background: darkmagenta;
+  padding: 16px;
   color: white;
 }
 
+.cards {
+  gap: 24px;
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+}
+
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
+.sidebar a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px
+}
+
+.sidebar ul {
+  list-style: none;
+  padding-inline-start: 0;
+}
+
+.sidebar li {
+  margin-bottom: 12px;
+}
+
 .sidebar {
+  padding: 16px;
   width: 300px;
+  flex-shrink: 0;
   background: royalblue;
   box-sizing: border-box;
 }
 
 .card {
+  padding: 16px;
+  width: 300px;
+  height: 300px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
